--- a/LearnToCode/LearnToCode.csproj
+++ b/LearnToCode/LearnToCode.csproj
@@ -1,11 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.6">
@@ -19,4 +18,7 @@
     </PackageReference>
   </ItemGroup>
 
+    <Target AfterTargets="Execution" Name="PostBuild" Condition="'$(Configuration)' == 'Debug'">
+		<Exec Command="npx tailwindcss -i /app.css -o /site.css --watch" />
+        </Target>
 </Project>
