--- a/LearnToCode/package.json
+++ b/LearnToCode/package.json
@@ -1,5 +1,10 @@
 {
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
     "tailwindcss": "^3.4.3"
+  },
+  "dependencies": {
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38"
   }
 }
