Updated Database to add user profile pictures

--- a/LearnToCode/DeveloperHub.csproj
+++ b/LearnToCode/DeveloperHub.csproj
@@ -18,6 +18,12 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Components\Pages\Learn2Code\" />
+    <Folder Include="Components\Pages\Chat\" />
+    <Folder Include="Components\Pages\Music\" />
+    <Folder Include="Components\Pages\Forums\" />
+  </ItemGroup>
 
 	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
 		<Exec Command="npx tailwindcss -i wwwroot/css/app.css -o wwwroot/css/site.css" />
