--- a/LearnToCode/DeveloperHub.csproj
+++ b/LearnToCode/DeveloperHub.csproj
@@ -7,6 +7,7 @@
     <UserSecretsId>96dfb770-9d8a-49bc-9c5f-3f54577225e8</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="BlazorInputFile" Version="0.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.6">
       <PrivateAssets>all</PrivateAssets>
