--- a/LearnToCode/package.json
+++ b/LearnToCode/package.json
@@ -5,6 +5,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.38"
+    "postcss": "^8.4.38",
+    "taos": "^1.0.5"
   }
 }
