--- a/LearnToCode/package.json
+++ b/LearnToCode/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
+    "tailwind-scrollbar": "^3.1.0",
     "taos": "^1.0.5"
   }
 }
